...
            message: result.text,
            buttonText: result.buttonText) { [weak self] in
                guard let self = self else { return }
                // сбрасываем значения на начальные
                self.presenter?.restartGame()
            }
        alertPresenter?.present(alert: alertModel, id: "Game result")
    }
    
    // метод для показа индикатора загрузки
    func showLoadingIndicator() {
        activityIndicator.startAnimating()
    }
...
